fixed some bugs

--- a/layouts/adminBoilerplate.ejs
+++ b/layouts/adminBoilerplate.ejs
@@ -152,10 +152,13 @@
                 <a href="/admin/regulations">Regulations</a>
             </div>
             <div class="nav-element">
-                <a href="/admin/forms">forms</a>
+                <a href="/admin/forms">Forms</a>
             </div>
             <div class="nav-element">
-                <a href="/admin/templates">templates</a>
+                <a href="/admin/templates">Templates</a>
+            </div>
+            <div class="nav-element">
+                <a href="/admin/transitions">Transitions</a>
             </div>
             <div class="nav-element">
                 <a href="/admin/logout">Logout</a>
