--- a/layouts/facultyBoilerplate.ejs
+++ b/layouts/facultyBoilerplate.ejs
@@ -110,16 +110,7 @@
                 <a href="/faculty/dashboard">Dashboard</a>
             </div>
             <div class="nav-element">
-                <a href="/faculty/attendance">Attendance</a>
-            </div>
-            <div class="nav-element">
-                <a href="/faculty/section">Section</a>
-            </div>
-            <div class="nav-element">
-                <a href="/faculty/download">Download</a>
-            </div>
-            <div class="nav-element">
-                <a href="/faculty/resources">Resources</a>
+                <a href="/faculty/section">Sections</a>
             </div>
             <div class="nav-element">
                 <a href="/faculty/logout">Logout</a>
